主工作流生图完善